--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <description>A library for easy storing and accessing EventHandler&lt;ActionEvent&gt; in a JavaFX &amp; Maven application. See https://github.com/Naoghuman/lib-action for more details.</description>
+    <description>A library for easy storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven application. See https://github.com/Naoghuman/lib-action for more details.</description>
     <name>Lib-Action</name>
     <dependencies>
         <dependency>
