--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,6 @@
     </properties>
     <description>A library for easy storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven application. See https://github.com/Naoghuman/lib-action for more details.</description>
     <name>Lib-Action</name>
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>Lib-Logger</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -31,4 +24,12 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Lib-Logger</artifactId>
+            <version>0.0.3</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
