--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>Lib-Action</artifactId>
     <version>0.2.1-SNAPSHOT</version> <!-- -SNAPSHOT -->
     <packaging>jar</packaging>
-    <description>A library for easy storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven desktop application. See https://github.com/Naoghuman/lib-action for more details.</description>
+    <description>Lib-Action is library for `easy` storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven desktop application. See https://github.com/Naoghuman/lib-action for more details.</description>
     <name>Lib-Action</name>
     <inceptionYear>2014</inceptionYear>
     <url>https://github.com/Naoghuman/lib-action.git</url>
@@ -44,7 +44,7 @@
     
     <build>
         <plugins>
-            <!-- for RELEASE
+            <!-- for RELEASE 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
