--- a/pom.xml
+++ b/pom.xml
@@ -83,9 +83,9 @@
     
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>Lib-Logger</artifactId>
-            <version>0.2.1</version>
+            <groupId>com.github.naoghuman</groupId>
+            <artifactId>lib-logger</artifactId>
+            <version>0.3.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
