--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>com.github.naoghuman</groupId>
-    <artifactId>Lib-Action</artifactId>
+    <artifactId>lib-action</artifactId>
     <version>0.3.0-SNAPSHOT</version> <!-- -SNAPSHOT -->
     <packaging>jar</packaging>
     <description>Lib-Action is library for `easy` storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven desktop application. See https://github.com/Naoghuman/lib-action for more details.</description>
