--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,6 @@
                 <configuration>
                     <additionalparam>-Xdoclint:none</additionalparam>
                 </configuration>
-                
                 <!-- for RELEASE
                 <executions>
                     <execution>
@@ -86,6 +85,22 @@
                     <tagNameFormat>lib-action-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
+            <!-- for RELEASE 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
         </plugins>
     </build>
     
