--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
                 <configuration>
-                    <tagNameFormat>lib-action-@{project.version}</tagNameFormat>
+                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
             <!-- for RELEASE 
