--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>com.github.naoghuman</groupId>
     <artifactId>lib-action</artifactId>
-    <version>0.6.0</version> <!-- -SNAPSHOT -->
+    <version>0.7.0-SNAPSHOT</version> <!-- -SNAPSHOT -->
     <packaging>jar</packaging>
     <description>Lib-Action is library for `easy` storing and accessing actions (EventHandler&lt;ActionEvent&gt;) in a JavaFX &amp; Maven desktop application. See https://github.com/Naoghuman/lib-action for more details.</description>
     <name>Lib-Action</name>
@@ -44,7 +44,7 @@
     
     <build>
         <plugins>
-            <!-- for RELEASE -->
+            <!-- for RELEASE 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -58,7 +58,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- -->
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -66,7 +66,7 @@
                 <configuration>
                     <additionalparam>-Xdoclint:none</additionalparam>
                 </configuration>
-                <!-- for RELEASE -->
+                <!-- for RELEASE 
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -75,9 +75,9 @@
                         </goals>
                     </execution>
                 </executions>
-                <!-- -->
+                -->
             </plugin>
-            <!-- for RELEASE -->
+            <!-- for RELEASE 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -92,10 +92,9 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- -->
+            -->
         </plugins>
     </build>
-    
     
     <dependencies>
         <dependency>
